k8s/api/namespace.yaml
#------------------------------------------------------------------------------
# Namespace for Production Application
#------------------------------------------------------------------------------
apiVersion: v1
kind: Namespace
metadata:
  name: app-production
  labels:
    name: app-production
    environment: production
